# licenselint

./: Cargo.toml  README.md  action.yml
.github/workflows/: line_lint.yml
licenselint/: Cargo.toml
licenselint-cli/: Cargo.toml
licenselint-cli/src/: main.rs
licenselint/src/: config.rs  issue.rs  lib.rs  license.rs  linter.rs
licenselint/src/template/: arkts_apache20.rs  clang_format_apache20.rs  cmake_apache20.rs  cmake_lists_apache20.rs  cpp_apache20.rs  go_apache20.rs  hpp_apache20.rs  in_apache20.rs  ipp_apache20.rs  java_apache20.rs  mod.rs  properties_apache20.rs  python_apache20.rs  rust_apache20.rs  toml_apache20.rs  tpp_apache20.rs  typescript_apache20.rs  xml_apache20.rs  yaml_apache20.rs
